# cuda-visual-servoing

./: .clang-format  .clang_tidy  .gitignore  CMakeLists.txt  README.md  cameraCommand.sh  command.txt  conanfile.py  exampleCode2.cpp  getData.cu  gpu_edge.cu  hello.cpp  nvcc_commands.txt  output.txt  velocity.cu  videoTest.cpp
apps/client/: CMakeLists.txt  main.cpp
apps/examples/: CMakeLists.txt  main.cpp  rgbTest.cpp  videoTest.cpp
apps/piano_tiles/: CMakeLists.txt  main.cpp
cmake/: CVSConfig.cmake.in
docker/: Dockerfile  docker-compose.yaml
examples/: CMakeLists.txt  exampleCode.cpp
include/: camera.h  camera.hpp  config.h.in  errors.h
media/: example.avi
scripts/: add_nvcc_to_path.sh  recordBGR.cu
scripts/plot/: plot.py
src/: calibrate.cu  camera.cpp  camera.cu  cpu_edge.cu  main.cpp  main.cu  manipulateImage.cpp  middle.cu  reduction.cu  videoTest.cpp
src/application/: CMakeLists.txt  main.cpp  middle.cu  pixel.cu  reduction.cu  trigger.cu  velocity.cu
src/calibration/: calibrate.cu  getData.cu  logging.hpp  manipulateImage.cpp
src/camera/: CMakeLists.txt
src/camera/include/: camera.hpp
src/camera/src/: camera.cpp
src/comparison/: cpu_edge.cu  gpu_edge.cu
src/config/: CMakeLists.txt
src/config/include/: config.h.in  errors.h
src/example/: exampleCode.cpp  exampleCode2.cpp  rgbTest.cpp
src/imageProcessing/: CMakeLists.txt
src/imageProcessing/include/: imgProc.hpp
src/imageProcessing/src/: imgProc.cu
src/image_processing/: CMakeLists.txt
src/image_processing/include/: draw_utils.hpp  image_processing.hpp  imgProc.hpp  utility.hpp  visual_servo.hpp
src/image_processing/src/: image_processing.cu  imgProc.cu  utility.cpp  visual_servo.cu
src/include/: config.h
utility/: recordBGR.cu
